[package]
name = "rust-game"
version = "0.1.0"
authors = ["Ronva <Ronva@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
rltk = "0.8.1"
specs = "0.16.1"
specs-derive = "0.4.1"