[package]
name = "rust-game"
version = "0.1.0"
authors = ["Ronva <Ronva@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
bracket-lib = "0.8.1"
legion = "0.3.0"
# doryen-rs = "1.2.3"